--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DB_HOST=deneme:fatDana10@ds249017.mlab.com:49017
-DB_NAME=heroku_81pqc7tg
+DB_HOST=deneme:********@ds249017.mlab.com:49017
+DB_NAME=********
